--- a/roomba_dynamixel_controller/CMakeLists.txt
+++ b/roomba_dynamixel_controller/CMakeLists.txt
@@ -16,6 +16,8 @@ find_package(catkin REQUIRED COMPONENTS
   std_srvs
   trajectory_msgs
   dynamixel_angle_msgs
+  tf2
+  tf2_ros
 )
 
 ## System dependencies are found with CMake's conventions
