--- a/roomba_dynamixel_controller/config/param/roomba_dynamixel_controller.yaml
+++ b/roomba_dynamixel_controller/config/param/roomba_dynamixel_controller.yaml
@@ -1,7 +1,12 @@
 # roomba_dynamixel_controller's parameter
+execution_time: 0.4
 
-offset_angle: 
-target_angle: 
-hz: 
-wait_time: 
-dynamixel_name:
+# tf parameter
+dynamixel_name: dynamixel
+dynamixel_frame_id: dynamixel
+base_link_frame_id: base_link
+dynamixel_x: 0.0
+dynamixel_y: 0.0
+dynamixel_z: 0.633
+dynamiel_roll: 0.0
+dynamiel_pitch: 0.0
