--- a/roomba_dynamixel_controller/package.xml
+++ b/roomba_dynamixel_controller/package.xml
@@ -7,14 +7,13 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>cmake_modules</depend>
+  <depend>dynamixel_angle_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
-  <depend>std_srvs</depend>
+  <depend>tf2_ros</depend>
   <depend>trajectory_msgs</depend>
-  <depend>dynamixel_angle_msgs</depend>
 
   <export>
   </export>
